🔒️ implement auth0 secu with profile